Fix GitHub Actions token permissions for Pages deploy

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Red+Rose:wght@300;400;500;600;700&display=swap"
     rel="stylesheet" />
 
-  <title>Tangerine</title>
+  <title>Tangerine: Market to Doorstep</title>
   <meta name="title" content="Tangerine: Market to Doorstep">
 
   <!-- Open Graph -->
